compiler/tests/should-pass/delegation/polymorphism/polybounds.via
fun f{X, Y, Z}(a: int{X}, b: int{Y}, c: out int{Z}) where (X ⊓ Y <: Z) : {Z<-} {
  out c = a + b;
}

fun main() {
  val x : int = input int from alice;
  val y : int = input int from bob;
  f(x, y, val z);
}

host alice
host bob
