compiler/tests/should-fail/InsecureDataFlowIntegrity.via
/* InsecureDataFlowError */

fun main() {
    val untrusted: int{a<-} = 42;
    val trusted: int{(a ∧ b)<-} = untrusted;
}

host a
host b
